# mathanim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Windows-GenProject.bat  basic_example.py  setup.py  table_example.py
CMake/: FindGLAD.cmake  FindGLEW.cmake  FindGLFW.cmake  FindImGui.cmake  FindSPDLOG.cmake  FindSTB.cmake
Engine/: CMakeLists.txt  dependencies.json
Engine/Source/Private/: Application.cpp  Logger.cpp
Engine/Source/Private/Platform/OpenGL/: OpenGLContext.cpp
Engine/Source/Private/Platform/Windows/: Win32Window.cpp
Engine/Source/Public/: Application.h  Common.h  Core.h  Logger.h  Window.h
Engine/Source/Public/Events/: ApplicationEvents.h  Event.h
Engine/Source/Public/Platform/OpenGL/: OpenGLContext.h
Engine/Source/Public/Platform/Windows/: Win32Window.h
Engine/Source/Public/Rendering/: RenderContext.h
Engine/Source/Public/Utilities/: MacroUtilities.h
Samples/: CMakeLists.txt
Samples/Source/Private/: main.cpp
mathanim/: __init__.py  actions.py  core.py  errors.py  objects.py  scene.py  sequences.py  timeline.py  utils.py
samples/: table_example.py
